--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
  <!--      <a href="#">About</a> -->
     </nav>
     <span id="welcome-msg"></span>
-    <a id="logout-link" href="#">Main</a>
+    <a id="logout-link" href="LogoutServlet">Logout</a>
     <i id="avatar" class="avatar fa fa-user fa-2x"></i>
   </header>
   
